Main Page Houses Activity , Houses API changed
CustomerMainPage is changed to HousesActivity. From now login customer is routed to HousesActivity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/envervalencia"
-        android:label="@string/app_name"
+        android:label="HouseMate Finding App"
         android:roundIcon="@drawable/envervalencia"
         android:supportsRtl="true"
         android:theme="@style/Theme.DemoDemoBitirmeProje"
